<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="@color/soft_yellow">

    <EditText
        android:id="@+id/editCanvasTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_name"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/maplestory_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCanvasSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:ems="10"
        android:fontFamily="@font/maplestory_light"
        android:gravity="right"
        android:hint="@string/canvas_size"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCanvasTitle" />

    <Button
        android:id="@+id/createConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/soft_pink"
        android:fontFamily="@font/maplestory_light"
        android:onClick="createNewCanvas"
        android:text="@string/Draw"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifCheckBox" />

    <CheckBox
        android:id="@+id/saveOriginalCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        android:checked="true"
        android:fontFamily="@font/maplestory_light"
        android:text="@string/save_as_original_size"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCanvasSize" />

    <CheckBox
        android:id="@+id/gifCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        android:fontFamily="@font/maplestory_light"
        android:text="@string/make_gif"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveOriginalCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>